@@ -40,14 +40,15 @@ Finish mobile template.
 Go through all templates and check for XSS, that's the only vulnerability found so far
 	Check for places that need htmlspecialchars()
 Convert some templates to php instead of smarty because it would look nicer to developers
+Add Ampache XML API template
+Work on finishing EXT JS template, and add more templates from Ampache, Jinzora, Subsonic, and WinAmp Remote
+------------- DEFAULT -------------
+Add podcast list template
 Work on default template, give fancy options like
 	Space evenly which does the spacing and
 	Use tables, which puts results in a table, and 
 	Use Javascript which selects item with javascript instead of forms
 	FIX detail options in default template
-Add podcast list template
-Add Ampache XML API template
-Work on finishing EXT JS template, and add more templates from Ampache, Jinzora, Subsonic, and WinAmp Remote
 ------------- EXT JS -------------
 Fix arrow-key movement in extjs template, in thumbnails view of the FolderView.js
 Add desktop.ini/folder.ini files and fix up thumbnails in FolderView.js
