@@ -1,0 +1,46 @@
+{* LIST XML "XML File List" *}
+{if $smarty.const.USE_DATABASE}{assign var=prefix value='db_'}{else}{assign var=prefix value='fs_'}{/if}
+{php}
+$ext_icons = array();
+$ext_icons['FOLDER'] = '/' . HTML_ROOT . HTML_TEMPLATE . 'images/filetypes/folder_96x96.png';
+$ext_icons['FILE'] = '/' . HTML_ROOT . HTML_TEMPLATE . 'images/filetypes/file_96x96.png';
+
+$type_icons = array();
+$type_icons['audio'] = '/' . HTML_ROOT . HTML_TEMPLATE . 'images/filetypes/music_96x96.png';
+
+$this->assign('ext_icons', $ext_icons);
+$this->assign('type_icons', $type_icons);
+{/php}
+<?xml version="1.0" encoding="utf-8"?>
+<request>
+{if !isset($error) || $error eq ''}
+	<count>{$total_count}</count>
+{section name=file loop=$files}
+	<file>
+		{assign var=index value=$smarty.section.file.index+$smarty.request.start}
+		<index>{$index}</index>
+		<id>{$files[file].id}</id>
+		<name>{$files[file].Filename|utf8_encode|htmlspecialchars}</name>
+		<text>{$files[file].Filename|utf8_encode|htmlspecialchars}</text>
+{assign var=type_arr value='/'|@split:$files[file].Filemime}
+{assign var=type value=$type_arr.0}
+{assign var=ext value=$files[file].Filetype}
+		<icon>{if isset($ext_icons.$ext)}{$ext_icons.$ext}{elseif isset($type_icons.$type)}{$type_icons.$type}{else}{$ext_icons.FILE}{/if}</icon>
+		<ext>{$ext|htmlspecialchars}</ext>
+		<tip>{foreach from=$columns item=column_value}{if isset($files[file].$column_value)}{$column_value}: {$files[file].$column_value|utf8_encode|htmlspecialchars}&lt;br /&gt;{/if}{/foreach}</tip>
+		<path>{$files[file].Filepath|utf8_encode|htmlspecialchars}</path>
+		<link>{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file.php/{$smarty.request.cat}/{$files[file].id}/{$files[file].Filename|utf8_encode|urlencode|htmlspecialchars}</link>
+		<short>{$files[file].Filename|truncate:13:"...":true|utf8_encode|htmlspecialchars}</short>
+{if $files[file].Filepath|@handles:'archive'}<cat>{$prefix}archive</cat>
+{elseif $files[file].Filepath|@handles:'diskimage'}<cat>{$prefix}diskimage</cat>
+{else}<cat>{$prefix}file</cat>{/if}
+{foreach from=$columns item=column_value}
+		<info-{$column_value}>{if isset($files[file].$column_value)}{$files[file].$column_value|utf8_encode|htmlspecialchars}{/if}</info-{$column_value}>
+{/foreach}
+	</file>
+{/section}
+{else}
+	<success>false</success>
+	<error>{$error}</error>
+{/if}
+</request>
