@@ -1,0 +1,33 @@
+@charset "utf-8";
+/* CSS Document */
+
+.thumb {
+	background-repeat:no-repeat;
+	height:16px;
+	width:16px;
+}
+.thumb, .thumb.file_ext_ {
+	background-image:url(images/filetypes/file_16x16.png);
+}
+.thumb.file_ext_FOLDER {
+	background-image:url(images/filetypes/folder_16x16.png);
+}
+.thumb.file_type_audio {
+	background-image:url(images/filetypes/audio_16x16.png);
+}
+.thumb.file_ext_ISO {
+	background-image:url(images/filetypes/iso_16x16.png);
+}
+.thumb.file_type_text {
+	background-image:url(images/filetypes/text_16x16.png);
+}
+.thumb.file_type_video {
+	background-image:url(images/filetypes/video_16x16.png);
+}
+.thumb.file_type_image {
+	background-image:url(images/filetypes/image_16x16.png);
+}
+
+.thumb.file_ext_ZIP, .thumb.file_ext_RAR, .thumb.file_ext_TGZ, .thumb.file_ext_BZ2, .thumb.file_ext_TBZ, .thumb.file_ext_ARK, .thumb.file_ext_DEB, .thumb.file_ext_7Z, .thumb.file_ext_TAR, .thumb.file_ext_GZ, .thumb.file_ext_SZIP {
+	background-image:url(images/filetypes/archive_16x16.png);
+}
